# ds-flood-gfm

./: .env.example  .gitignore  OPTIMIZATION_STRATEGY.md  README.md  check_doy_provenance.py  claude.md  debug_temporal_compositor.py  demo_provenance_visualization.py  flood_exposure.py  jrc_mapping.py  pyproject.toml  test_doy_logic.py  validate_temporal_growth.py
.claude/commands/: cleanup.md
book_gfm/: .gitignore  01_querying_gfm.qmd  02_poc_gfm_anomaly_flag.qmd  02_temporal_compositing.qmd  03_cameroon_snapshots.qmd  03_population_exposure.qmd  04_production_pipeline.qmd  A1_poc_latst_image_composite.qmd  A3_cameroon_snapshots.qmd  A4_hurricane_melissa.qmd  A5_why_custom_pipeline.qmd  _publish.yml  _quarto.yml  index.qmd
examples/: east_africa_gfm_poc_demo.ipynb  gfm_affected_population_demo.ipynb  pakistan_flood_example.ipynb
experiments/: flood_jamaica_v1.py  flood_jamaica_v2.py  flood_jamaica_v3.py  flood_provenance_analysis.py  flood_provenance_analysis_cached.py
exploration/: test.qmd
reprex/: README.md  demonstrate_stac_issue.py  stac_spatial_metadata_issue.md  test_spatial_filter.py
scripts/: 01_download_codab_to_blob.py  02_generate_affected_population_choropleths.py  03_generate_flooded_area_choropleths.py  04_generate_flood_polygons.py  README.md
scripts/data_prep/: extract_gaza_to_blob.py  extract_songkhla_to_blob.py
source_legacy/gfm/: README.md  blob_utils.py  download_latest.py  gfm_rest_client.py  pipeline_latest_3days.py  stac_gfm_processor.py  stac_spatial_filter.py  test_spatial_filter.py
src/ds_flood_gfm/: affected_population.py  cloud_temporal_compositor.py  constants.py  country_config.py  east_africa_gfm_poc.py  geo_utils.py  gfm_downloader.py  ghsl_downloader.py  write_cog.py  (+6 more)
(+1 files in other folders)
