[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-flood-gfm"
version = "0.1.0"
description = "Global Flood Monitoring (GFM) data exploration"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pystac-client",
    "stackstac",
    "jupyter",
    "ipykernel",
    "shapely",
    "rasterio",
    "xarray",
    "rioxarray",
    "geopandas",
    "requests",
    "tqdm",
    "pandas",
    "matplotlib",
    "numpy",
    "duckdb",
    "fsspec",
    "aiohttp>=3.13.0",
    "ee>=0.2",
    "geemap>=0.36.4",
    "pyarrow>=21.0.0",
    "xee>=0.0.22",
    "ocha-stratus>=0.1.5",
    "bottleneck>=1.6.0",
    "python-dotenv>=1.1.1",
    "exactextract>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
